# gorgone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blinkWhite.sh  j.cue-crash1  laser-test.pd  of-daemon.sh  pd-daemon.sh  pi-reboot.sh  pi-shutdown.command  pi-upgrade.sh  pi@gorone-1.local  reboot-RPi.command  start-of.command  start-pd-Gui.command  start-pd.command  start.sh  startOfRemotely.command  startPdGui.sh  startPdRemotely.command  startPdRemotelyGui.command  turnOffLed.sh  turnOnIR.sh  turnOnWhite.sh  upgrade.sh
Max/: BLEU_GORGONE.maxproj  gorgone.view.maxpat  gorgoneMinuitSetup.maxpat  gorgoneRemote.maxpat  gorgoneSynopsis - copie.maxpat  gorgoneSynopsis-demo-2.maxpat  gorgoneSynopsis-demo-3.maxpat  gorgoneSynopsis-demo-4.maxpat  gorgoneSynopsis-demo-5 low.maxpat  gorgoneSynopsis-demo-5.maxpat  gorgoneSynopsis.maxpat  j.cue remote test.maxpat  laser.view.maxpat  morphing.maxpat  shapes.cues.txt
Max 2/patchers/: animIris.maxpat  animMorph.maxpat  animStatic.maxpat  connectRPi.maxpat  gorgoneMinuitSetup.maxpat  gorgoneRemote.maxpat  irisDetection.maxpat  laser.view.maxpat  main.maxpat
Max/data/: IVGI.maxsnap  Krush.maxsnap  Krush[1].maxsnap  Krush[1]_20160726.maxsnap  Krush[1]_20160726_1.maxsnap  Krush[2].maxsnap  Krush[2]_20160726.maxsnap  Krush[3].maxsnap  Krush[3]_20160726.maxsnap  Krush[4].maxsnap  PluggoFuzz.amxd.maxsnap  Transient.maxsnap  basic.json  gorgone_1.json  gorgone_2.json
Max/patchers/: animContemplation.maxpat  animIris.maxpat  animMorph.maxpat  animStatic.maxpat  gorgone.view.maxpat  gorgoneMinuitSetup.maxpat  gorgoneRemote.maxpat  gorgoneRemoteAntoine.maxpat  gorgoneTemplate.maxpat  irisDetection.maxpat  laser.view.maxpat  main.maxpat  patch son-1.maxpat  plug.maxpat  speech.maxpat
Max/patchers/old/: gorgoneSynopsis-demo-4 bis.maxpat  gorgoneSynopsis-demo.maxpat
Max/synopsis/: gorgone-phase-1.maxpat
Pd/: ildafile.l_arm  laser-driver.pd  tabread2~.pd
Pd/abs/: app.pd  connectLocalApp.pd  connectRemoteApp.pd  tabread2~.pd
Pd/audiosettings/: GIGAPortHD+.pd  UDJ6.pd
Pd/ilda/: ildafile-help.pd
archives/: BLEU_GORGONE.pd  circle.model.pd  circle.view.pd  etoile.pd  rosace-voice.pd  test1.pd
archives/max/: BLEU_GORGONE-2.maxpat  BLEU_GORGONE-3.maxpat  BLEU_GORGONE-4.maxpat  BLEU_GORGONE.maxpat  BLEU_GORGONE.pat
old-maxpat/: gorgoneSynopsis-demo-3.maxpat  gorgoneSynopsis-demo-4.maxpat  gorgoneSynopsis-demo-5 bis.maxpat  gorgoneSynopsis.maxpat
src/: brightPi.h  crossVideoGrabber.cpp  crossVideoGrabber.h  gnublin.cpp  gnublin.h  gorgone.cpp  gorgone.h  gorgoneEyeDetection.cpp  gorgoneEyeDetection.h  gorgoneMotionDetector.h  main.cpp  ofxJamoma.cpp  ofxJamoma.h  svgInterpolation.cpp  svgInterpolation.h
